# llm-inference

./: .gitignore  AWS_DORMANT_MODE.md  Dockerfile  README.md  SESSION_RAG_SCORING_AND_STRESS_TEST.md  SESSION_SUMMARY_AWS_COST_MGMT.md  agent-orchestration-script.md  app.py  aws-shutdown.sh  aws-startup.sh  deploy-legal.sh  fix_index.py  generate_legal_data.py  inference-cpu-scaling.json  inference-memory-scaling.json  inference-request-scaling.json  lambda-permissions-policy.json  legal-demo-plan.md  local-dev-stop.sh  local-dev-test.sh  local-dev.sh  migrate_schema.py  requirements.txt  schema_legal.sql  setup-task-definition.json  setup_pgvector.py  test-inference-api.sh  test-legal-api.sh
claude-rag/: CLAUDE.md  pyproject.toml  rag_benchmark.py
claude-rag/demos/: poker_app_demo.py
claude-rag/docs/: IMPLEMENTATION-GUIDE.md  bootstrap-guide.md  claude-code-rag-plan.md  phase2-precedence-graph.mermaid  rag-precedence-graph-revised.mermaid  rag-precedence-graph.mermaid  rag-startup-guide.md  rag_benchmark.py  rag_dashboard.jsx  rag_preflight.py  rag_stats_server.py
claude-rag/human_verification_tests/: phase1-verification-and-phase2-revised.md  phase2-verification-tests.md
claude-rag/src/claude_rag/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
claude-rag/tests/: conftest.py  stress_test_dashboard.py  test_chunker.py  test_db.py  test_dedup.py  test_embeddings.py  test_hooks.py  test_logging_config.py  test_metadata.py  test_parser.py  test_phase1_verification.py  test_phase2_verification.py  test_pipeline.py  test_search.py
(+86 files in other folders)
